[gd_scene load_steps=2 format=3 uid="uid://vn2qnoibhf0o"]

[ext_resource type="Script" path="res://addons/bpb_placement/ui/root_normal_ui.gd" id="1_h1giq"]

[node name="RootNormalUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_h1giq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="btn_new_tab" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "New Tab"

[node name="lbl_mode" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/btn_new_tab" to="." method="_on_btn_new_tab_button_down"]
[connection signal="tab_changed" from="VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
